# CTF

./: .gitignore  README.md  run.sh
backend/ctf/: ctf.cabal  ctf.db  stack.yaml  test1.db
backend/ctf/src/: Database.hs  Main.hs  Model.hs
front/: elm.json  index.html  script.sh
front/elm-stuff/0.19.0/: Elm_Repl.elmi  Elm_Repl.elmo  Main.elmi  Main.elmo  Pages-CTF-Main.elmi  Pages-CTF-Main.elmo
front/scss/: main.scss
front/src/Pages/CTF/: Main.elm  Model.elm  Subscription.elm  Update.elm  View.elm  features.txt
front/static/: elm.js  elm.min.js  main.css  main.css.map
scss/: main.scss
src/Pages/CTF/: Main.elm
