name:                ctf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ctf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ctf
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty, 
                       aeson,
                       text,
                       unordered-containers,
                       persistent,
                       persistent-template,
                       persistent-postgresql,
                       transformers,
                       monad-logger,
                       wai-extra,
                       wai-cors

